# spam-detection-bays-theorem

./: .gitignore  guest.ipynb  main.ipynb  pyproject.toml  readme.md
